Bluewolf SFMTA/src/objects/Sticker__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stickers</relationshipLabel>
        <relationshipName>Stickers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <label>Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Assigned__c</fullName>
        <description>Number of stickers assigned to operator</description>
        <inlineHelpText>Number of stickers assigned to operator</inlineHelpText>
        <label>Number of Assigned</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unassigned__c</fullName>
        <description>Number of stickers unassigned to operator</description>
        <inlineHelpText>Number of stickers unassigned to operator</inlineHelpText>
        <label>Number of Unassigned</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator_Number__c</fullName>
        <label>Operator Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Stickers</relationshipLabel>
        <relationshipName>Stickers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sticker</label>
    <nameField>
        <label>Sticker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stickers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>